# bibsearch

./: .gitignore  AUTHORS  README.md  pyproject.toml  requirements.txt  setup.cfg
bibsearch/: __init__.py  bibsearch.hy  cli.py  doi.hy  isbn.hy
