[metadata]
name = bibsearch
description = Generate bibtex entries from Crossref and doi.org searches
url = https://github.com/atisharma/bibsearch
author = Ati Sharma
author_email = ati.sharma+bibsearch@diplomail.ch
keywords = bibtex, crossref
license = GPL-3
license_file = LICENSE
long_description = file: README.md


[options]
python_requires = >= 3.9
install_requires = file: requirements.txt
include_package_data = True
package_dir = 
packages = find:

[options.entry_points]
console_scripts =
    bibsearch = bibsearch.cli:bib_search
    doisearch = bibsearch.cli:doi_search
    works = bibsearch.cli:works_search

[options.packages.find]
where = 

[options.package_data]
* = *.hy
