[metadata]
name = bibsearch
description = Generate bibtex entries from Crossref, doi.org and Google Books searches
url = https://github.com/atisharma/bibsearch
author = Ati Sharma
author_email = ati+bibsearch@agalmic.ltd
keywords = bibtex, crossref, isbn, doi
license = GPL-3
license_file = LICENSE
long_description = file: README.md


[options]
python_requires = >= 3.11
install_requires = file: requirements.txt
include_package_data = True
package_dir = 
packages = find:

[options.entry_points]
console_scripts =
    bibsearch = bibsearch.cli:bib_search
    doisearch = bibsearch.cli:doi_search
    isbnsearch = bibsearch.cli:isbn_search
    arxivsearch = bibsearch.cli:arxiv_search
    works = bibsearch.cli:works_search

[options.packages.find]
where = 

[options.package_data]
* = *.hy
